Changelog 2021 Jan 31:
    -Easter egg in banning, can be enabled or disabled mid-run

Changelog 2021 Jan 30:
    -The bot can manage roles if given the right permissions
    -!basic_add_role can be used to give a role (if the user's top role is higher)
    -!basic_remove_role can be used to remove a role (if the user's top role is higher)

Changelog 2021 Jan 29:
    -The bot leaves a voice channel if it is empty, without prompting

Changelog 2021 Jan 28:
    -Added command alias: !basic_add for !basic_queue
    -Added command alias: !basic_next for !basic_skip
    -!basic_play now can do !basic_yt's job too (provided there's nothing playing).
    -Youtube search functionality added - there should be no "invalid URL" messages now.

Changelog 2021 Jan 26:
    -Generic 'BasicBot will restart for an update soon!' message added
    -Customizable !basic_announce [PASSWORD] "[MESSAGE]" command added
    -Channel command responses edited: BasicBot responds in channels starting with 'bot' or named 'basicbot'

Changelog 2021 Jan 25:
    -BasicBot was deployed to AWS today.
    -On Voice State Update no longer throws an error

Changelog 2021 Jan 24:
    -!basic_terminate replaces !basicbot_terminate
    -Message and command interpretation speed improved
    -Instead of using force-delete-ids.txt, the bot removes new messages in channels named 'official-complaints'
    -Fixed and optimized 'noot'
    -Audio encoding has returned to PCM/MP3 for better volume balancing
    -CPU usage is higher this way, but the volume balancing is better
    -Fixed issue where moving between two BasicBot enabled voice chats prevents a leave message from being sent
    -!basic_leave allows the bot to play non-song audio upon rejoining
    
Changelog 2021 Jan 22:
    -Audio encoding has been migrated to Opus instead of MP3 for lower CPU usage
    -The audio caches are now merged, meaning the bot can queue/play songs considerably faster if they're already cached.