@@ -1,3 +1,7 @@
+Changelog 2021 Feb 04:
+    -Bot prefix changed from '!basic_' to '--'
+    -Code cleanup and modularity tweaks
+
 Changelog 2021 Jan 31:
     -Easter egg in banning, can be enabled or disabled mid-run
 
